@@ -57,6 +57,12 @@ Regina::Triangulation::NTriangulation_ptr
         NNormalSurface_i::getTriangulation() {
     return NTriangulation_i::newWrapper(MY_ENGINE_OBJECT->getTriangulation());
 }
+char* NNormalSurface_i::getName() {
+    return MY_ENGINE_OBJECT->getName().dupe();
+}
+void NNormalSurface_i::setName(const char* newName) {
+    MY_ENGINE_OBJECT->setName(newName);
+}
 CORBA::Boolean NNormalSurface_i::isCompact() {
     return MY_ENGINE_OBJECT->isCompact();
 }
